gnome-shell: Fix popup-sub-menu padding for 3.32
The popup-sub-menu labels were misaligned by margin added on commit
a6bbdfcadae8da9d42933fdda598f4da274011b9. This was corrected for 3.30
with 5d5bcfcae677a9dee2540e83ee29bf98a79b79c4.

Align popup-sub-menu labels with parent for 3.32 as well, until
there's proper fix for the original issue.

--- a/common/gnome-shell/3.32/sass/_common.scss
+++ b/common/gnome-shell/3.32/sass/_common.scss
@@ -1076,10 +1076,10 @@ StScrollBar {
   min-width: 23.5em;
   .popup-menu-icon { padding: 0 4px; }
   .popup-sub-menu .popup-menu-item > :first-child {
-    &:ltr { /* 12px spacing + 2*4px padding + 16px icon */
-            padding-left: 36px; }
-    &:rtl { /* 12px spacing + 2*4px padding + 16px icon */
-            padding-right: 36px; }
+    &:ltr { /* 12px spacing + 2*4px padding + 16px icon - 4px margin */
+            padding-left: 32px; }
+    &:rtl { /* 12px spacing + 2*4px padding + 16px icon - 4px margin */
+            padding-right: 32px; }
   }
 }
 
